lab 1 Exercise 7: Teacher Class with Inheritance